--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,9 @@
         <h1>Rotisería</h1>
         <nav>
             <ul>
-                <li><a href="{% url 'index' %}">Inicio</a></li>
-                <li><a href="{% url 'productos:lista' %}">Productos</a></li>
+                <li><a href="">Promo</a></li>
+                <li><a href="">Carrito</a></li>
+                <li><a href="">Disponible</a></li>
             </ul>
         </nav>
     </header>
@@ -23,6 +24,9 @@
         {% endblock contenido %}
     </main>
     <footer>
+        <p>intagram</p>
+        <p>wasap</p>
+        <p>direcion</p>
         <p>&copy; 2024 Rotisería. Todos los derechos reservados.</p>
     </footer>
 </body>
