--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% load static %}
@@ -6,26 +5,31 @@
 {% block contenido %}
 
 {% for categoria, productos in productos_por_categoria.items %}
-<section>
+<section class="mb-4">
     <!-- Usamos la imagen y el título como botón -->
-    <button onclick="toggleSubmenu('{{ categoria }}')" style="background: none; border: none; cursor: pointer;">
+    <button onclick="toggleSubmenu('{{ categoria }}')" class="btn btn-link" style="background: none; border: none; cursor: pointer;">
         {% for categoria_img, imagen in imagenes_categorias %}
             {% if categoria == categoria_img %}
-            <div>
-                <img src="{{ imagen }}" alt="{{ categoria }}" style="max-width: 150px; height: 150px;"> <h2>{{ categoria }}</h2>
+            <div class="d-flex align-items-center">
+                <img src="{{ imagen }}" alt="{{ categoria }}" class="img-thumbnail" style="max-width: 150px; height: 150px;">
+                <h2 class="ms-3">{{ categoria }}</h2>
             </div>
             {% endif %}
         {% endfor %}
-        
     </button>
-    <ul id="submenu-{{ categoria }}" style="display: none;">
+
+    <ul id="submenu-{{ categoria }}" class="list-unstyled" style="display: none;">
         {% for producto in productos %}
-        <li>
-            <h3>{{ producto.nombre }}</h3>
-            <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" style="max-width: 150px;">
-            <p>{{ producto.descripcion }}</p>
-            <p>Precio: ${{ producto.precio }}</p>
-            <button>Pedir</button>
+        <li class="mb-3">
+            <div class="card" style="width: 18rem;">
+                <img src="{{ producto.imagen.url }}" class="card-img-top" alt="{{ producto.nombre }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">{{ producto.descripcion }}</p>
+                    <p class="card-text"><strong>Precio: ${{ producto.precio }}</strong></p>
+                    <button class="btn btn-primary">Pedir</button>
+                </div>
+            </div>
         </li>
         {% endfor %}
     </ul>
