--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,11 @@
                                 <a class="nav-link text-white" href="#">Promo</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Carrito</a>
+                                <a class="nav-link text-white" href="{% url 'carrito:carrito_list' %}">Carrito
+                                    {% if total_productos > 0 %}
+                                        <span class="badge bg-light text-dark">{{ total_productos }}</span>
+                                    {% endif %}
+                                </a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
