--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="{% static 'css/detalles.css' %}">
 </head>
 <body>
-    <header class="bg-primary text-white py-3">
+    
+    <header class="encabezado bg-primary text-white py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <h1 class="h2 mb-0">Rotisería</h1>
@@ -22,7 +23,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Promo</a>
+                                <a class="nav-link text-white" href="{% url 'index' %}">Menu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="{% url 'carrito:carrito_list' %}">Carrito
